# mirror

./: Makefile  Mirror.hs  mirror.cabal
Debian/: Mirror.hs
Debian/Mirror/: Dist.hs  DistMain.hs
debian/: changelog  control  debian-mirror.install  rules
src/Debian/: Mirror.hs
utils/: DebianMirror.hs  ReleaseMaker.hs
