Name:           debian-mirror
Version:        1.1.8
License:        BSD3
-- License-File:	debian/copyright
Author:		Jeremy Shaw
Homepage:       http://src.seereason.org/debian-mirror
Build-Type: Simple
Build-Depends:  base, Unixutils, debian >= 3.74, unix, network, time >= 1.1, Extra >= 1.11, regex-posix, old-locale, process, directory, bytestring, pretty, containers, help, filepath, text
Synopsis:       A library and application for mirroring Debian compatible repositories
ghc-options:	-fglasgow-exts -O2 -fasm
Exposed-modules:
	Debian.Mirror, Debian.Mirror.Dist, Debian.Mirror.DistMain

Executable: debian-mirror
Main-is: utils/DebianMirror.hs
ghc-options: -O2 -fasm -threaded

-- For more complex build options see:
-- http://www.haskell.org/ghc/docs/latest/html/Cabal/
