Name:           debian-mirror
Version:        1.1.8
License:        BSD3
-- License-File:	debian/copyright
Author:		Jeremy Shaw
Homepage:       http://src.seereason.org/debian-mirror
Build-Type: Simple
Synopsis:       A library and application for mirroring Debian compatible repositories
Cabal-Version:  >= 1.8

flag network-uri
 Description: Get Network.URI from the network-uri package
 Default: True

Library
  Build-Depends:  base, Unixutils, debian >= 3.84, unix, time >= 1.1, Extra >= 1.11, regex-posix, old-locale, process, directory, bytestring, pretty, containers, help, filepath, text
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network < 2.6
  ghc-options: -O2 -fasm
  Exposed-modules:
    Debian.Mirror, Debian.Mirror.Dist, Debian.Mirror.DistMain

Executable debian-mirror
  Main-is: utils/DebianMirror.hs
  Build-Depends: base, bytestring, containers, debian >= 3.84, directory, Extra, filepath, old-locale, pretty, process, regex-posix, text, time, unix, Unixutils
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network < 2.6
  ghc-options: -O2 -fasm -threaded
