Name:           debian-mirror
Version:        1.1.8
License:        BSD3
-- License-File:	debian/copyright
Author:		Jeremy Shaw
Homepage:       http://src.seereason.org/debian-mirror
Build-Type: Simple
Synopsis:       A library and application for mirroring Debian compatible repositories
Cabal-Version:  >= 1.8

flag pretty-new
 Description: pretty-1.1.2 includes the Text.PrettyPrint.HughesPJClass module from prettyclass
 Default: True

flag network-uri
 Description: Get Network.URI from the network-uri package
 Default: True

Library
  Build-Depends:  base, Unixutils, debian >= 3.87, unix, time >= 1.1, sr-extra >= 1.11, regex-posix, old-locale, process, directory, bytestring, containers, sr-help, filepath, text
  ghc-options: -O2 -fasm
  Exposed-modules:
    Debian.Mirror, Debian.Mirror.Dist, Debian.Mirror.DistMain
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network < 2.6
  if flag(pretty-new)
    Build-Depends: pretty >= 1.1.2
  else
    Build-Depends: pretty, prettyclass

Executable debian-mirror
  Main-is: DebianMirror.hs
  Hs-Source-Dirs: utils
  ghc-options: -O2 -fasm -threaded
  Build-Depends: base, debian-mirror, sr-extra, unix
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network < 2.6
  if flag(pretty-new)
    Build-Depends: pretty >= 1.1.2
  else
    Build-Depends: pretty, prettyclass
